<?xml version="1.0"?>
<package format="3">
  <name>ORB_SLAM3</name>
  <version>0.1.0</version>
  <description>ROS 2 wrapper for ORB_SLAM3</description>
  <maintainer email="adel0800@hotmail.com">El7agAdel</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ORB_SLAM3_CPP</exec_depend>
  <exec_depend>ORB_SLAM3_PY</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>

  <!-- ORB-SLAM3 dependencies -->
  <depend>opencv</depend>
  <depend>sophus</depend>
  <depend>pangolin</depend>
  <depend>eigen3</depend>
  <depend>glew</depend>
  <depend>opengl</depend>

  <build_depend>ament_cmake_python</build_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
